# vk_analyst

./: DESCRIPTION.md  README.md  TASKS.md  TESTS.word  metadata.yaml  parse_json.py  part_one.py  pyproject.toml  sql_queries.csv  test.csv  test.ipynb  test.py  womr.json  Тестовое_задание.docx
database/: database.py
future/: photoes.py
itproger/: itproger.json
science_technology/: science_technology.json
vk_analyst/: etl.py  extract_load_db.py  metadata.yaml
vk_analyst/.file_versions/pipelines/dark_shadow/metadata.yaml/: 1690970616  1690970801  1690970875  1690970912  1690971130
vk_analyst/.file_versions/pipelines/etl_vk/metadata.yaml/: 1690970543
vk_analyst/.file_versions/pipelines/old_sound/metadata.yaml/: 1690970380  1690970382
vk_analyst/pipelines/old_sound/: metadata.yaml
